@@ -1,5 +1,13 @@
 2007-07-26  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Claudio Saavedra <csaavedra@alumnos.utalca.cl>
+
+	* src/other-network-dialog.c
+		- Fix critical warning; gtk_widget_destroy already destroys the
+			wireless adapter TreeModel (#438441)
+
+2007-07-26  Dan Williams  <dcbw@redhat.com>
+
 	Patch from Jani Monoses <jani@ubuntu.com>
 
 	* src/main.c
